--- a/util/demo.html
+++ b/util/demo.html
@@ -43,10 +43,8 @@ function update_status() {
 }
 </script>
 <h3>Segwit address demo</h3>
-<p><input type="text" id="address" maxlength="74" oninput="update_status();" /></p>
+<p><input type="text" id="address" maxlength="74" size="74" oninput="update_status();" /></p>
 
 <p><a id="result"></a></p>
-
-<p><input type="button" onclick="update_status();" /></p>
 </body>
 </html>
