--- a/util/demo.html
+++ b/util/demo.html
@@ -5,39 +5,26 @@
 <title>Segwit address error locator demo</title>
 </head>
 <body>
-<script src="asm.js" type="text/javascript"></script>
+<script src="demo.js" type="text/javascript"></script>
 <script type="text/javascript">
-segwit_addr_decode_fault = Module.cwrap('segwit_addr_decode_fault', 'number', ['number', 'number', 'number', 'string', 'string']);
-bech32_locate_errors = Module.cwrap('bech32_locate_errors', 'number', ['number', 'number']);
-
-function locate_errors(hrp, address) {
-    var witver = Module._malloc(8);
-    var witdata = Module._malloc(84);
-    var witdata_len = Module._malloc(8);
-    var fault = segwit_addr_decode_fault(witver, witdata, witdata_len, hrp, address)
-    Module._free(witdata_len);
-    Module._free(witdata);
-    Module._free(witver);
-    if (fault >= 0) {
-        return bech32_locate_errors(fault, 71);
-    } else {
-        return -1;
-    }
-}
 
 function update_status() {
-    var errors = locate_errors("bc", document.getElementById("address").value);
-    if (errors == 0) {
-        document.getElementById("result").innerHTML = "OK";
-    } else if (errors < 0) {
-        document.getElementById("result").innerHTML = "Invalid";
+    var address = document.getElementById("address").value;
+    var res = bech32_ecc.check(address);
+    if (res === null) {
+        document.getElementById("result").innerHTML = "Ok";
     } else {
-        var e1 = (errors & 0xFF);
-        var e2 = (errors >> 8);
-        if (e2 == 0) {
-            document.getElementById("result").innerHTML = "Likely error on position " + (e1 - 1);
-        } else {
-            document.getElementById("result").innerHTML = "Likely error on position " + (e1 - 1) + " and " + (e2 - 1);
+        document.getElementById("result").innerHTML = res.error;
+        if (res.pos !== null) {
+            var cp = "";
+            for (var p = 0; p < address.length; ++p) {
+                if (res.pos.indexOf(address.charAt(p)) != -1) {
+                    cp += "<div style=\"color:red\">" + address.charAt(p) + "</div>";
+                } else {
+                    cp += address.charAt(p);
+                }
+            }
+            document.getElementById("copy").innerHTML = cp;
         }
     }
 }
@@ -46,5 +33,6 @@ function update_status() {
 <p><input type="text" id="address" maxlength="74" size="74" oninput="update_status();" /></p>
 
 <p><a id="result"></a></p>
+<p><a id="copy"></a></p>
 </body>
 </html>
