--- a/util/demo.html
+++ b/util/demo.html
@@ -10,7 +10,7 @@
 
 function update_status() {
     var address = document.getElementById("address").value;
-    var res = bech32_ecc.check(address);
+    var res = check(address);
     if (res === null) {
         document.getElementById("result").innerHTML = "Ok";
     } else {
