--- a/util/demo.html
+++ b/util/demo.html
@@ -19,7 +19,7 @@ function update_status() {
             var cp = "";
             for (var p = 0; p < address.length; ++p) {
                 if (res.pos.indexOf(address.charAt(p)) != -1) {
-                    cp += "<div style=\"color:red\">" + address.charAt(p) + "</div>";
+                    cp += "<a style=\"font:red\">" + address.charAt(p) + "</a>";
                 } else {
                     cp += address.charAt(p);
                 }
