--- a/util/demo.html
+++ b/util/demo.html
@@ -10,8 +10,14 @@
 
 function update_status() {
     var address = document.getElementById("address").value;
-    var res = bech32_ecc.check(address);
+    var res = segwit_addr_ecc.check(address);
     var cp = "";
+    if (res.error === null) {
+        if (res.hrp != "bc" && res.hrp != "tb") {
+            res.error = "Unknown address type";
+            res.pos = [0,1];
+        }
+    }
     if (res === null) {
         document.getElementById("result").innerHTML = "<a style=\"color:green\">Ok</a>";
     } else {
