--- a/util/demo.html
+++ b/util/demo.html
@@ -18,7 +18,7 @@ function update_status() {
             res.pos = [0,1];
         }
     }
-    if (res === null) {
+    if (res.error === null) {
         document.getElementById("result").innerHTML = "<a style=\"color:green\">Ok</a>";
     } else {
         document.getElementById("result").innerHTML = res.error;
