clear result on empty field

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -29,12 +29,13 @@ function update_status() {
             }
         }
     }
+    if(address.length === 0) document.getElementById("result").innerHTML = "";
     document.getElementById("copy").innerHTML = cp;
 }
 </script>
     <div class="container" style="margin-top:50px">
             <div class="card text-left">
-                <h3 class="card-header">Segwit address demo</h3>
+                <h3 class="card-header">SegWit address demo</h3>
                 <div class="card-block">
                     <div class="form-group row">
                         <label for="lgFormGroupInput" class="col-sm-2 col-form-label col-form-label-lg">Adress</label>
