--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,6 +7,7 @@
         <title>Segwit address error locator demo</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <script type="text/javascript">
@@ -55,6 +56,12 @@ function update_status() {
                 </div>
             </div>
         </div>
+
+        <footer class="footer" syle="bottom:0;">
+            <div class="container text-center">
+                <img height="80px" src="SegWit.png" width="288px">
+            </div>
+        </footer>
     </body>
 </html>
 
