--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,10 +4,13 @@
         <!-- Required meta tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Segwit address error locator demo</title>
+        <title>Segwit address decoder demo</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
+        <style>
+            .monospace { font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace; }
+        </style>
     </head>
     <body>
         <script type="text/javascript">
@@ -37,21 +40,21 @@ function update_status() {
 </script>
     <div class="container" style="margin-top:50px">
             <div class="card text-left">
-                <h3 class="card-header">SegWit address demo</h3>
+                <h3 class="card-header">SegWit address decoder demo</h3>
                 <div class="card-block">
                     <div class="form-group row">
                         <label for="lgFormGroupInput" class="col-sm-2 col-form-label col-form-label-lg">Address</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control form-control-lg" style="font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;" id="address" placeholder="SegWit address" size="74" oninput="update_status();" />
+                            <input type="text" class="form-control form-control-lg monospace" id="address" placeholder="SegWit address" size="74" oninput="update_status();" />
                         </div>
                     </div>
                     <p><a id="result"><br/></a></p>
-                    <p><span style="font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;"><a id="copy"><br/></a></span></p>
+                    <p><span div="monospace"><a id="copy"><br/></a></span></p>
                     Fill field with:
                     <ul>
-                    <li> <a onclick='document.getElementById("address").value = "bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4";update_status();' style="text-decoration:underline;font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;">bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4</a> (P2WPKH)
-                    <li> <a onclick='document.getElementById("address").value = "BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4";update_status();' style="text-decoration:underline;font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;">BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4</a> (P2WPKH with errors)
-                    <li> <a onclick='document.getElementById("address").value = "bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3";update_status();' style="text-decoration:underline;font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;">bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3</a> (P2WSH)
+                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4";update_status();'>bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4</a> (P2WPKH)
+                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4";update_status();'>BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4</a> (P2WPKH with errors)
+                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3";update_status();'>bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3</a> (P2WSH)
                     </ul>
                 </div>
             </div>
