--- a/demo/demo.html
+++ b/demo/demo.html
@@ -49,12 +49,12 @@ function update_status() {
                         </div>
                     </div>
                     <p><a id="result"><br/></a></p>
-                    <p><span div="monospace"><a id="copy"><br/></a></span></p>
+                    <p><span class="monospace"><a id="copy"><br/></a></span></p>
                     Fill field with:
                     <ul>
-                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4";update_status();'>bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4</a> (P2WPKH)
-                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4";update_status();'>BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4</a> (P2WPKH with errors)
-                    <li> <a class="monospace" style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3";update_status();'>bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3</a> (P2WSH)
+                    <li> <a style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qw508d6qejxtdg4y5r3zarvary0c5xw7kv8f3t4";update_status();'>P2WPKH example</a>
+                    <li> <a style="text-decoration:underline;" onclick='document.getElementById("address").value = "BC1QW508D6QEJXTDG4Y5R3ZARVAYR0C5XW7KV8F3T4";update_status();'>P2WPKH example with errors</a>
+                    <li> <a style="text-decoration:underline;" onclick='document.getElementById("address").value = "bc1qrp33g0q5c5txsp9arysrx4k6zdkfs4nce4xj0gdcccefvpysxf3qccfmv3";update_status();'>P2WSH example</a>
                     </ul>
                 </div>
             </div>
