--- a/demo/demo.html
+++ b/demo/demo.html
@@ -66,7 +66,7 @@ function update_status() {
             </div>
         </div>
 
-        <footer class="footer" syle="bottom:0;">
+        <footer class="footer">
             <div class="container text-center">
                 <img height="80px" src="SegWit.png" width="288px">
             </div>
