--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,8 +45,29 @@ function update_status() {
 }
 </script>
     <div class="container" style="margin-top:50px">
+            <div class="card mb-3 text-left">
+                <h3 class="card-header">SegWit address format</h3>
+                <div class="card-block">
+                    <p>There is proposal for a new SegWit address format to replace BIP 142.
+                    This format is not required for using segwit, but is more
+                    efficient, flexible, and nicer to use.</p>
+
+                    <p>The format is base 32 and uses a simple checksum algorithm with strong
+                    error detection properties. Reference code in several languages as
+                    well as a website demonstrating it are included.</p>
+
+                    <p>Furthermore, it is possible to locate the characters which are likely
+                    wrong as shown by the demo below.</p>
+
+                    <ul>
+                    <li> <a href="https://github.com/sipa/bech32/blob/master/bip-witaddr.mediawiki">BIP proposal</a></li>
+                    <li> <a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2017-March/013749.html">Mailinglist announcement</a></li>
+                    </ul>
+                </div>
+            </div>
+
             <div class="card text-left">
-                <h3 class="card-header">SegWit address decoder demo</h3>
+                <h3 class="card-header">Decoder demo</h3>
                 <div class="card-block">
                     <div class="form-group row">
                         <label for="lgFormGroupInput" class="col-sm-2 col-form-label col-form-label-lg">Address</label>
@@ -64,13 +85,13 @@ function update_status() {
                     </ul>
                 </div>
             </div>
-        </div>
+    </div>
 
-        <footer class="footer">
-            <div class="container text-center">
-                <img height="80px" src="SegWit.png" width="288px">
-            </div>
-        </footer>
+    <footer class="footer">
+        <div class="container text-center">
+            <img height="80px" src="SegWit.png" width="288px">
+        </div>
+    </footer>
     </body>
 </html>
 
