Update to real BIP 173

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Segwit address decoder demo</title>
+        <title>BIP173 Segwit address decoder demo</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -48,7 +48,7 @@ function update_status() {
             <div class="card mb-3 text-left">
                 <h3 class="card-header">SegWit address format</h3>
                 <div class="card-block">
-                    <p>There is proposal for a new SegWit address format to replace BIP 142.
+                    <p><a href="https://github.com/bitcoin/bips/blob/master/bip-0173.mediawiki">BIP 173</a> is a proposal for a new SegWit address format to replace <a href="https://github.com/bitcoin/bips/blob/master/bip-0142.mediawiki">BIP 142</a>.
                     This format is not required for using segwit, but is more
                     efficient, flexible, and nicer to use.</p>
 
@@ -60,8 +60,8 @@ function update_status() {
                     wrong as shown by the demo below.</p>
 
                     <ul>
-                    <li> <a href="https://github.com/sipa/bech32/blob/master/bip-witaddr.mediawiki">BIP proposal</a></li>
                     <li> <a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2017-March/013749.html">Mailinglist announcement</a></li>
+                    <li> <a href="https://www.youtube.com/watch?v=NqiN9VFE4CU">SF Bitcoin devs presentation</a> (<a href="https://diyhpl.us/wiki/transcripts/sf-bitcoin-meetup/2017-03-29-new-address-type-for-segwit-addresses/">Transcript by Bryan Bishop</a>)</li>
                     </ul>
                 </div>
             </div>
