--- a/demo/demo.html
+++ b/demo/demo.html
@@ -60,8 +60,8 @@ function update_status() {
                     wrong as shown by the demo below.</p>
 
                     <ul>
-                    <li> <a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2017-March/013749.html">Mailinglist announcement</a></li>
-                    <li> <a href="https://www.youtube.com/watch?v=NqiN9VFE4CU">SF Bitcoin devs presentation</a> (<a href="https://diyhpl.us/wiki/transcripts/sf-bitcoin-meetup/2017-03-29-new-address-type-for-segwit-addresses/">Transcript by Bryan Bishop</a>)</li>
+                    <li><a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2017-March/013749.html">Mailinglist announcement</a></li>
+                    <li>SF Bitcoin devs talk: <a href="https://www.youtube.com/watch?v=NqiN9VFE4CU">Video</a>, <a href="https://prezi.com/gwnjkqjqjjbz/bech32-a-base32-address-format/">Presentation</a>, <a href="https://diyhpl.us/wiki/transcripts/sf-bitcoin-meetup/2017-03-29-new-address-type-for-segwit-addresses/">Transcript by Bryan Bishop</a></li>
                     </ul>
                 </div>
             </div>
